AC_INIT([Tarpon], [0.1])

AM_INIT_AUTOMAKE([1.10 no-define foreign dist-xz no-dist-gzip])
AM_PATH_PYTHON([2.7])

AC_CONFIG_FILES([
    Makefile
    data/Makefile
    data/tarpon.desktop
    data/ui/Makefile
    data/ui/about_dialog.ui
    data/ui/about_dialog_hb.ui
    src/Makefile
    src/tarpon_app/Makefile
    src/tarpon_app/gtk/Makefile
])

AC_OUTPUT
